--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ paginate = 9
 
 [params.text]
     back = "&larr; Back to Home"
-    edit = "Edit this page &rarr;"
+    edit = "Edit this page-&rarr;"
     truncated = "&hellip;"
     
 [params.banner]
