--- a/docs/admin/config.yml
+++ b/docs/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: PeterTheobald/www.PeterTheobald.com
   branch: master # Branch to update (optional; defaults to master)
   
 media_folder: "static/images" # Media files will be stored in the repo under static/images/uploads
