--- a/docs/admin/config.yml
+++ b/docs/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
-  name: github
-  repo: PeterTheobald/www.PeterTheobald.com
-  branch: master # Branch to update (optional; defaults to master)
+  name: github-gateway
+  
   
 media_folder: "static/images" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images" # The src attribute for uploaded media will begin with /images/upload
