--- a/docs/admin/config.yml
+++ b/docs/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  
+  publish_mode: editorial_workflow
   
 media_folder: "static/images" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images" # The src attribute for uploaded media will begin with /images/upload
