--- a/docs/admin/config.yml
+++ b/docs/admin/config.yml
@@ -7,7 +7,7 @@ public_folder: "/images" # The src attribute for uploaded media will begin with 
 
 collections:
   - name: "play" # Used in routes, e.g., /admin/collections/blog
-    label: "Play" # Used in the UI
+    label: "Play Section" # Used in the UI
     folder: "content/play" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
@@ -15,12 +15,13 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image"}
       - {label: "Scripts", name: "scripts", widget: "string"}
       - {label: "Tags", name: "tags", widget: "string"}
+      - {label: "Draft", name: "draft", widget: "boolean", default: "false"}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "tech" # Used in routes, e.g., /admin/collections/blog
-    label: "Tech" # Used in the UI
+    label: "Tech Section" # Used in the UI
     folder: "content/tech" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
@@ -28,7 +29,8 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "tech"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image"}
       - {label: "Scripts", name: "scripts", widget: "string"}
       - {label: "Tags", name: "tags", widget: "string"}
+      - {label: "Draft", name: "draft", widget: "boolean", default: "false"}
       - {label: "Body", name: "body", widget: "markdown"}
