--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ googleAnalytics = "UA-18164620-1"
 disqusShortname = "petertheobald"
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
+pluralizelisttitles: "false"
 footnotereturnlinkcontents = "↩"
 hasCJKLanguage = true
 enableEmoji = true
@@ -14,8 +15,8 @@ paginate = 9
 
 [permalinks]
     post = "/post/:slug/"
-    play = "/play/:slug"
-    tech = "/tech/:slug"
+    play = "/play/:slug/"
+    tech = "/tech/:slug/"
 
 [[menu.main]]
     name = "Home"
@@ -27,11 +28,11 @@ paginate = 9
     weight = 2
 [[menu.main]]
     name = "Tech"
-    url = "/categories/tech/"
+    url = "/tech/"
     weight = 3
 [[menu.main]]
     name = "Play"
-    url = "/categories/play/"
+    url = "/play/"
     weight = 4
 [[menu.main]]
     name = "Tags"
