--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ googleAnalytics = "UA-18164620-1"
 disqusShortname = "petertheobald"
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
-pluralizeListTitles: false
+pluralizeListTitles = false
 footnotereturnlinkcontents = "↩"
 hasCJKLanguage = true
 enableEmoji = true
