--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,9 +15,9 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Thumbnail", name: "thumbnail", widget: "image"}
-      - {label: "Scripts", name: "scripts", widget: "string"}
-      - {label: "Tags", name: "tags", widget: "string"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image", required: "false"}
+      - {label: "Scripts", name: "scripts", widget: "string", required: "false"}
+      - {label: "Tags", name: "tags", widget: "string", required: "false"}
       - {label: "Draft", name: "draft", widget: "boolean", default: "false"}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "tech" # Used in routes, e.g., /admin/collections/blog
