--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,8 +16,8 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Thumbnail", name: "thumbnail", widget: "image", required: false}
-      - {label: "Scripts", name: "scripts", widget: "string", required: false}
-      - {label: "Tags", name: "tags", widget: "string", required: false}
+      - {label: "Scripts", name: "scripts", widget: "list", required: false}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: "Draft", name: "draft", widget: "boolean", default: false}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "tech" # Used in routes, e.g., /admin/collections/blog
@@ -30,7 +30,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Thumbnail", name: "thumbnail", widget: "image", required: false}
-      - {label: "Scripts", name: "scripts", widget: "string", required: false}
-      - {label: "Tags", name: "tags", widget: "string", required: false}
+      - {label: "Scripts", name: "scripts", widget: "list", required: false}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: "Draft", name: "draft", widget: "boolean", default: false}
       - {label: "Body", name: "body", widget: "markdown"}
