--- a/docs/admin/config.yml
+++ b/docs/admin/config.yml
@@ -1,5 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: PeterTheobald/www.PeterTheobald.com
+  branch: master
+  site_domain: petertheobald.netlify.com
   publish_mode: editorial_workflow
   
 media_folder: "static/images" # Media files will be stored in the repo under static/images/uploads
@@ -15,10 +18,10 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Thumbnail", name: "thumbnail", widget: "image"}
-      - {label: "Scripts", name: "scripts", widget: "string"}
-      - {label: "Tags", name: "tags", widget: "string"}
-      - {label: "Draft", name: "draft", widget: "boolean", default: "false"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image", required: false}
+      - {label: "Scripts", name: "scripts", widget: "list", required: false}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
+      - {label: "Draft", name: "draft", widget: "boolean", default: false}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "tech" # Used in routes, e.g., /admin/collections/blog
     label: "Tech Section" # Used in the UI
@@ -29,8 +32,8 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "tech"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Thumbnail", name: "thumbnail", widget: "image"}
-      - {label: "Scripts", name: "scripts", widget: "string"}
-      - {label: "Tags", name: "tags", widget: "string"}
-      - {label: "Draft", name: "draft", widget: "boolean", default: "false"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image", required: false}
+      - {label: "Scripts", name: "scripts", widget: "list", required: false}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
+      - {label: "Draft", name: "draft", widget: "boolean", default: false}
       - {label: "Body", name: "body", widget: "markdown"}
